# market-sim

./: CLAUDE.md  README.md  pyproject.toml
docs/: SPEC.md
